--- a/content/post/conference-text/index.Rmd
+++ b/content/post/conference-text/index.Rmd
@@ -11,12 +11,17 @@ tags:
 - Webscraping
 - Shiny
 title: Text Analysis and Processing of General Conference Talks from The Church of Jesus Christ of Latter-Day Saints
+author: David Teuscher
+links: 
+ - names: "GitHub"
+   url: https://github.com/skylerg022/conference-church-of-jesus-christ
+   icon_pack: fab
+   icon: github
 url_code: ""
 url_pdf: ""
 url_slides: ""
 url_video: ""
 ---
-
 
 This project takes text from talks from General Conferenece of the Church of Latter-Day Saints and processes and analyzes the text. The processed data can be explored with this [Shiny app](https://david-teuscher.shinyapps.io/conference-analysis-app/). The code for scraping the data and the analysis can be found [here](https://github.com/skylerg022/conference-church-of-jesus-christ). 
 
@@ -26,5 +31,6 @@ The project is a combination for work from [Skyler Gray](https://github.com/skyl
 
 The data was web scraped from the official site of The Church of Jesus Christ of Latter-Day Saints using Beautiful Soup and Selenium in Python. There is a page with a similar format for each conference. An example of the page to be scraped is [here](https://www.churchofjesuschrist.org/study/general-conference/1971/04?lang=eng). On this page, it lists the title for each talk, the speaker's name, and possibly a small excerpt from the talk. For each talk, we extracted the speaker's name as well as the `href` elements that corresponded to the link to the actual talk. 
 
-After collecting all of the links, we looped through all of the links and pulled the title of the talk and the text of the talk. The resulting information was saved into a pandas DataFrame that contained the year and month of the conference, the speaker's name, the talk title, and the text of the talk. Afterwards, the data was written to a .csv file to be used in R for further analysis. 
+After collecting all of the links, we looped through all of the links and pulled the title of the talk and the text of the talk. The resulting information was saved into a pandas DataFrame that contained the year and month of the conference, the speaker's name, the talk title, and the text of the talk. Afterwards, the data was written to a .csv file to be used in R for further analysis. The Python code for this can be found [here](https://github.com/skylerg022/conference-church-of-jesus-christ/blob/master/conference_scraper.ipynb). 
+
 
